# -----------------------------------------------------------------------------------------------------------------------------
# Standalone test executables
# -----------------------------------------------------------------------------------------------------------------------------
add_subdirectory(nonAutTest)
add_subdirectory(BasicCnTaylorTest)
add_subdirectory(diffIncl)

add_subdirectory(BasicCurveMaskTest)
